--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "A single TsLint binary file that can be vendored",
   "main": "index.js",
   "scripts": {
+    "build": "rollup --config rollup.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,6 +26,7 @@
   "devDependencies": {
     "rollup": "^0.41.4",
     "rollup-plugin-commonjs": "^7.0.0",
+    "rollup-plugin-json": "^2.1.0",
     "rollup-plugin-node-resolve": "^2.0.0",
     "tslint": "4.4.2",
     "typescript": "2.1.6"
