--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "A single TsLint binary file that can be vendored",
   "main": "index.js",
   "scripts": {
+    "build": "browserify --entry node_modules/tslint/lib/tslint-cli.js --outfile tslint.js --node --external typescript",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +24,7 @@
   },
   "homepage": "https://github.com/pspeter3/tslint-vendor#readme",
   "devDependencies": {
+    "browserify": "^14.1.0",
     "tslint": "4.4.2",
     "typescript": "2.1.6"
   }
