--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "A single TsLint binary file that can be vendored",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,6 +25,7 @@
   "homepage": "https://github.com/pspeter3/tslint-vendor#readme",
   "devDependencies": {
     "tslint": "4.4.2",
-    "typescript": "2.1.6"
+    "typescript": "2.1.6",
+    "webpack": "^2.2.1"
   }
 }
